# codeguardian-ai-

./: .dockerignore  .gitignore  COMPLETION_STATUS.md  DEPLOYMENT_GUIDE.md  Dockerfile  HF_DEPLOYMENT_STEPS.md  README.md  README_DEPLOYMENT.md  SUBMISSION_READY.md  TASK_EXECUTION_CHECKLIST.md  __init__.py  client.py  deploy_hf.py  environment.py  graders.py  index.html  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  results.jsonl  run_deployment.py  scenario_bank.json  scenario_bank.py  test_audit.py  test_deployment.py  test_integration.py  validate.py
graders/: __init__.py
server/: __init__.py  app.py  dependency_grader.py  security_grader.py  triage_grader.py
tasks/: __init__.py
tests/: test_environment.py  test_models.py
tests/integration/: test_environment_integration.py
